kubernetes/apps/external-services/garage/app/endpointslice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: ${APP}
  labels:
    kubernetes.io/service-name: ${APP}
addressType: IPv4
ports:
  - name: http
    port: 30188
    protocol: TCP
endpoints:
  - addresses:
      - ${GARAGE_IP}
