kubernetes/apps/external-services/garage/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${APP}
  labels:
    app: ${APP}
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 30188
      targetPort: 30188
