kubernetes/apps/external-services/garage/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/name: Garage
    gethomepage.dev/icon: garage.svg
    gethomepage.dev/href: https://${APP}.${SECRET_DOMAIN}
spec:
  hostnames:
    - ${APP}.${SECRET_DOMAIN}
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: ${APP}
          namespace: external-services
          port: 30188
